--- a/fam_allocate.html
+++ b/fam_allocate.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -109,19 +114,24 @@
 			<tr><td class="code">accessPermissions</td><td>Access permissions for this data item.</td></tr>
 			<tr><td class="code">region</td><td>
 					Descriptor for the region where the data item is being
-						created. If null, the default specified during fam_initialize() is
-						used.</td></tr>
+					created.</td></tr>
 		</tbody>
 	</table>
 	<p>&nbsp;</p>
 	<h2>Return Values</h2>
+	<p>Descriptor to the allocated data item. Throws <code>Fam_Exception</code> on error.</p>
+	<h2>Fam Error numbers</h2>
 	<table>
 	<tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
-	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>Data item name is already present in FAM.</td></tr>
+	<tr><td class="code">FAM_ERR_NAME_TOO_LONG</td><td>Data item name too long.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
 	</tbody>
 	</table>
 	<h2>Notes</h2>
@@ -129,10 +139,25 @@
 		requested size to maintain an implementation dependent byte alignment.
 		The allocated space is zeroed out during allocation. If a name is
 		provided during allocation, it can be used within subsequent calls to
-		fam_lookup() to retrieve the associated descriptor. If a name is not
+		<code>fam_lookup()</code> to retrieve the associated descriptor. If a name is not
 		provided during allocation, then the program itself is responsible for
 		saving and tracking the descriptor if required later, since the data
-		in FAM will be unreachable without the descriptor.</p>
+		in FAM will be unreachable without the descriptor. Also note that at present maximum data item name
+		length supported is 40 characters.</p>
+	<p><code>Fam_Descriptor</code> provides a method to retrieve an opaque read-only data structure called 
+	<code>Fam_Global_Descriptor</code> which represents both the region and data item in FAM. <code>Fam_Global_Descriptor</code>
+	can be freely copied, and shared across processing nodes by the program, and is portable
+	across operating system and program instances.</p>
+<pre>
+// Fam_Global_Descriptor Fam_Descriptor::get_global_descriptor();
+Fam_Global_Descriptor gDescriptor = famDescriptor->get_global_descriptor();
+</pre>
+	<p><code>Fam_Descriptor</code> can be instantiated from <code>Fam_Global_Descriptor</code> using the following constructor.</p>
+<pre>
+// Fam_Descriptor::Fam_Descriptor(Fam_Global_Descriptor gDescriptor);
+Fam_Descriptor *dataItem = new Fam_Descriptor(gDescriptor);
+</pre>
+
 	<h2 id="e1">Example</h2>
 <pre>
 #include &lt;string.h>
@@ -165,7 +190,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
