--- a/fam_abort.html
+++ b/fam_abort.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -100,7 +105,7 @@
 		<tbody>
 			<tr><th>Name</th><th>Description</th></tr>
 			<tr>
-				<td class="code">Status</td>
+				<td class="code">status</td>
 				<td>
 					<p>Termination status desired by the PE.</p>
 				</td>
@@ -111,7 +116,7 @@
 	<p>None.</p>
 	<h2>Notes</h2>
 	<p>The OpenFAM library asynchronously notifies all other
-		cooperating PEs when fam_abort() is called, and the method returns
+		cooperating PEs when <code>fam_abort()</code> is called, and the method returns
 		before other PEs terminate. Since data consistency in FAM cannot be
 		guaranteed by the library, this method should not be used as the
 		normal exit.</p>
@@ -120,7 +125,7 @@
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
