--- a/fam_compare_swap.html
+++ b/fam_compare_swap.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -93,7 +98,7 @@
 		value and return the old value.</p>
 	<h2>Synopsis</h2>
 	<p class="code">int32_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
-		offset, int32_t, oldValue, int32_t newValue);</p>
+		offset, int32_t oldValue, int32_t newValue);</p>
 	<p class="code">int64_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
 		offset, int64_t oldValue, int64_t newValue);</p>
 	<p class="code">uint32_t fam_compare_swap(Fam_Descriptor *descriptor, uint64_t
@@ -164,19 +169,21 @@ TYPE cas(TYPE *p, TYPE oldValue, TYPE newValue){
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>The old value from FAM. Throws an exception on
+	<p>The old value from FAM. Throws <code>Fam_Exception</code> on
 		error.</p>
-	<h2>Exceptions</h2>
+	<h2>Fam error numbers</h2>
 	<table><tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
-	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during atomic operation over fabric.</td></tr>
+	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
-	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
 	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item not found in the region.</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>if there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
-	<tr><td class="code">Fam_Timeout_Exception</td><td>number of libfabric retry count reached</td></tr>
+	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
+	<tr><td class="code">FAM_ERR_TIMEOUT</td><td>Number of libfabric retry count reached</td></tr>
 	</tbody></table>
 	<h2>Notes</h2>
 	<p>These methods atomically compare a value in
@@ -184,8 +191,8 @@ TYPE cas(TYPE *p, TYPE oldValue, TYPE newValue){
 		expected value, swap a new value. The old value is returned. Note that
 		the offset argument must point to the correct value for the data type.
 		Availability of these methods is dependent on hardware support for the
-		operations. GCC currently does not define int128_t; it is defined in
-		fam.h.</p>
+		operations. GCC currently does not define <code>int128_t</code>; it is defined in
+		<code>fam.h</code>.</p>
 	<h2>Example</h2>
 <pre>
 #include &lt;string.h>
@@ -220,7 +227,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
