--- a/fam_get.html
+++ b/fam_get.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -91,7 +96,7 @@
 			<h1 class="code">openfam::fam::fam_get</h1>
 	<p>Copy a segment of memory from FAM to local memory.</p>
 	<h2>Synopsis</h2>
-	<p class="code">int fam_get_blocking(void *local, Fam_Descriptor *descriptor,
+	<p class="code">void fam_get_blocking(void *local, Fam_Descriptor *descriptor,
 		uint64_t offset, uint64_t nbytes);</p>
 	<p class="code">void fam_get_nonblocking(void *local, Fam_Descriptor
 		*descriptor, uint64_t offset, uint64_t nbytes);</p>
@@ -103,7 +108,7 @@
 			<tr><th>Name</th><th>Description</th></tr>
 			<tr>
 				<td class="code">
-					Local
+					local
 				</td>
 				<td>
 					Appropriately sized area of local memory to receive data.
@@ -111,7 +116,7 @@
 			</tr>
 			<tr>
 				<td class="code">
-					Descriptor
+					descriptor
 				</td>
 				<td>
 					Descriptor associated with the data item in FAM.
@@ -119,7 +124,7 @@
 			</tr>
 			<tr>
 				<td class="code">
-					Offset
+					offset
 				</td>
 				<td>
 					Byte offset from the start of the data item in FAM.
@@ -136,37 +141,34 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>The non-blocking call does not return a value on success. The
-		blocking call returns an integer value following normal C convention
-		of 0 for successful completion. Both non-blocking and blocking call
-		throw an exception on error.</p>
-	<h2>Exceptions</h2>
+	<p>These calls do not return a value on success. Both non-blocking and blocking calls
+		throw <code>Fam_Exception</code> on error.</p>
+	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
-	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during read operation
-		over fabric.</td></tr>
-	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during read operationover fabric.</td></tr>
-	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>libfabric error occurred.</td></tr>
-	<tr><td class="code">Fam_Timeout_Exception</td><td>number of libfabric retry count reached the timeout limit.
-	(Only for blocking call)</td></tr>
-	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
-	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item not found in the region.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
+	<tr><td class="code">FAM_ERR_TIMEOUT</td><td>Number of libfabric retry count reached.</td></tr>
 	</tbody>
 	</table>
 	<h2 id="e1">Notes</h2>
 	<p>The local memory pointer must point to an area of memory
-		sufficient to accommodate the incoming data (nbytes). Insufficient
+		sufficient to accommodate the incoming data (<code>nbytes</code>). Insufficient
 		allocation of local memory may cause segmentation violations or
 		corrupted data in local memory.</p>
-	<p>At return, the memory pointed to by local contains a copy of the
+	<p>Upon return, the memory pointed to by local contains a copy of the
 		data in FAM for the blocking call. For the non-blocking call, the
 		memory pointed to by the local pointer is not guaranteed to contain a
-		copy of the data in FAM until after a successful completion of a
-		fam_quiet() call.</p>
+		copy of the data in FAM until after successful completion of a subsequent 
+		<code>fam_quiet()</code> call.</p>
 	<h2>Examples</h2>
 <pre>
 // Example of blocking get
@@ -245,7 +247,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
