--- a/fam_map.html
+++ b/fam_map.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -93,7 +98,7 @@
 	<h2>Synopsis</h2>
 	<p class="code">void *fam_map(Fam_Descriptor *descriptor);</p>
 	<h2>Description</h2>
-	<p>This method maps a data item in FAM to the PEâ€™s virtual address
+	<p>This method maps a data item in FAM to the PE's virtual address
 		space.</p>
 	<h2>Input Arguments</h2>
 	<table>
@@ -104,7 +109,7 @@
 			</tr>
 			<tr>
 				<td class="code">
-					Descriptor
+					descriptor
 				</td>
 				<td>
 					Descriptor associated with the data item or region in FAM.			</td>
@@ -113,18 +118,20 @@
 	</table>
 	<h2>Return Values</h2>
 	<p>A pointer in the PE's virtual address space that can be used to
-		directly manipulate contents of FAM. Throws an exception on error.</p>
-	<h2>Exceptions</h2>
+		directly manipulate contents of FAM. Throws <code>Fam_Exception</code> on error.</p>
+	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
-	<tr><td class="code">Fam_Unimplemented_Exception</td><td>API not implemented error. (Only
-		for memory server allocator)</td></tr>
+	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
+	<tr><td class="code">FAM_ERR_UNIMPL</td><td>Calling unimplemented functions/APIs.</td></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
-	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item not found in the region.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
 	</tbody>
 	</table>
 	<h2>Notes</h2>
@@ -134,6 +141,7 @@
 		are managed appropriately. The implementation may limit the FAM size
 		(hence the size of data items) that can be mapped into the processor
 		address space at one time.</p>
+	<p><code>fam_map()</code> and <code>fam_unmap()</code>are currently only supported in the scale-up (shared memory) configuration of the OpenFAM reference implementation.</p>
 	<h2 id="e1">Example</h2>
 <pre>
 #include &lt;string.h>
@@ -170,12 +178,10 @@ int main(void) {
 	// ... Finalization code follows
 }
 </pre>	
-	
-		<a name="_Toc21627088"></a><a name="_Toc21685569"></a>
-		</article>
+	</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
