--- a/fam_set.html
+++ b/fam_set.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -121,7 +126,7 @@
 			</tr>
 			<tr>
 				<td class="code">
-					Descriptor
+					descriptor
 				</td>
 				<td>
 					Descriptor associated with the data item.
@@ -129,7 +134,7 @@
 			</tr>
 			<tr>
 				<td class="code">
-					Offset
+					offset
 				</td>
 				<td>
 					Offset within the data item in FAM where value is located.
@@ -137,7 +142,7 @@
 			</tr>
 			<tr>
 				<td class="code">
-					Value
+					value
 				</td>
 				<td>
 					Value to be set at the given location.
@@ -146,23 +151,26 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>None. Throws an exception on error.</p>
-	<h2>Exceptions</h2>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
+	<h2>Fam Error Numbers</h2>
 	<table><tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
-	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during atomic operation over fabric.</td></tr>
+	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
-	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
 	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item not found in the region.</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>if there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td> Memory server initialization failure</td></tr>
+	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
 	</tbody></table>
 	<h2>Notes</h2>
-	<p>These methods atomically set a value in FAM. Note that the
-		offset argument must point to the correct value for the data type.
-		Availability of these methods is dependent on hardware support for the
-		operations.</p>
+	<p>These methods atomically set a value to an existing value in
+		FAM, and return before the operation is complete. Note that the offset argument must point to the correct value for
+		the data type. Availability of these methods is dependent on hardware
+		support for the operations.</p>
+	<p>Successful completion of a subsequent <code>fam_quiet()</code> call ensures the completion of this atomic operation.</p> 
 	<h2>Example</h2>
 <pre>
 #include &lt;string.h>
@@ -181,7 +189,7 @@ fam *myFam = new fam();
 		// (an integer array with at least 10 elements)
 		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
 	
-		//Atomically set the value of first interger element in the array
+		//Atomically set the value of first integer element in the array
 		myFam->fam_set(descriptor, 0, 10);
 	
 		// ensure that the set operation is complete
@@ -199,7 +207,7 @@ fam *myFam = new fam();
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
