--- a/fam_xor.html
+++ b/fam_xor.html
@@ -14,8 +14,11 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="config_files.html">Configuration Files</a></li>
 			</ul>
 			<hr>
 			Initialization and Finalization
@@ -30,6 +33,7 @@
 				<li><a href="fam_list_options.html">fam_list_options</a></li>
 				<li><a href="fam_get_option.html">fam_get_option</a></li>
 				<li><a href="fam_lookup.html">fam_lookup</a></li>
+				<li><a href="fam_stat.html">fam_stat</a></li>
 			</ul>
 			<hr>
 			Memory Allocation
@@ -82,6 +86,7 @@
 			<hr>
 			Ordering
 			<ul>
+				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
 			</ul>
@@ -103,28 +108,30 @@
 <table><tbody>
 			<tr><th>Name</th><th>Description</th></tr>
 			<tr><td class="code">descriptor</td><td>Descriptor associated with the data item.</td></tr>
-			<tr><td class="code">Offset</td><td>Offset within the data item in FAM where value is located.</td></tr>
-			<tr><td class="code">Value</td><td>Value to be combined with the existing value at the given location.</td></tr>
+			<tr><td class="code">offset</td><td>Offset within the data item in FAM where value is located.</td></tr>
+			<tr><td class="code">value</td><td>Value to be combined with the existing value at the given location.</td></tr>
 	</tbody></table>
 	<h2>Return Values</h2>
-	<p>None. Throws an exception on error.</p>
-	<h2>Exceptions</h2>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
+	<h2>Fam Error Numbers</h2>
 	<table><tbody>
-	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
-	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during atomic operation over fabric.</td></tr>
+	<tr><th>Error</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
-	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
 	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item not found in the region.</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>if there is a communication error with memory server</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td> Memory server initialization failure</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
 	</tbody></table>
 	<h2>Notes</h2>
 	<p>These methods atomically replace a value in FAM with the Bitwise
-		XOR of the existing value and the value given in the method. Note that
+		XOR of the existing value and the value given in the method, and return before the operation is complete. Note that
 		the offset argument must point to the correct value for the data type.
 		Availability of these methods is dependent on hardware support for the
 		operations.</p>
+	<p>Successful completion of a subsequent <code>fam_quiet()</code> call ensures the completion of this atomic operation.</p> 
 	<h2>Example</h2>
 <pre>
 #include &lt;string.h>
@@ -143,7 +150,7 @@ int main(void) {
 		// (an integer array with at least 10 elements)
 		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
 	
-		// Atomically replace a value of first interger element in the array
+		// Atomically replace a value of first integer element in the array
 		// with the Bitwise XOR of it and a value of 0x444
 		uint32_t value = 0x444;
 		myFam->fam_xor(descriptor, 0, value);
@@ -164,7 +171,7 @@ int main(void) {
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2019, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
